--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Broadway</title>
-    <link rel="stylesheet" href="/resources/style.css">
+    <title>Broadway Design</title>
+    <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
-    <div class="">
+    <div class="header">
       <h1>Broadway Design</h1>
-      <nav>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
+      <nav id="links">
+      <p><a href="./home.html">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
       </nav>
     </div>
 
     <div class="">
-      <h2>Our Process</h2>
+      <h2 id="about">Our Process</h2>
       <img src="" alt="">
       <h3>Identify</h3>
       <p>We Focus on the most important details.</p>
@@ -32,11 +32,11 @@
 
     <div class="">
       <h3>Designed in New York</h3>
-      <h3>Portfolio</h3>
+      <h3 id="work">Portfolio</h3>
       <p>Coming Soon</p>
-      <h3>Team</h3>
+      <h3 id="team">Team</h3>
       <p>We're Hiring</p>
-      <h3>Contact</h3>
+      <h3 id="contact">Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>E-Mail: test@example.com</p>
       <p>Twitter: @test</p>
@@ -45,11 +45,11 @@
     <div class="footer">
       <p>&copy; Broadway 2016 </p>
       <nav>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
-      <p><a href="#"></a></p>
+      <p><a href="./home.html">Home</a></p>
+      <p><a href="#about">About</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
       </nav>
     </div>
   </body>
