--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
       </nav>
     </div>
 
-    <div class="">
+    <div>
       <h2 id="about">Our Process</h2>
-      <img src="" alt="">
+      <img src="resources/images/identify.svg" alt="">
       <h3>Identify</h3>
       <p>We Focus on the most important details.</p>
-      <img src="" alt="">
+      <img src="resources/images/understand.svg" alt="">
       <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
-      <img src="" alt="">
+      <img src="resources/images/execute.svg" alt="">
       <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
 
-    <div class="">
-      <h3>Designed in New York</h3>
+    <div>
+      <h3 id="nyc">Designed in New York</h3>
       <h3 id="work">Portfolio</h3>
       <p>Coming Soon</p>
       <h3 id="team">Team</h3>
@@ -43,13 +43,14 @@
     </div>
 
     <div class="footer">
-      <p>&copy; Broadway 2016 </p>
       <nav>
-      <p><a href="./home.html">Home</a></p>
-      <p><a href="#about">About</a></p>
-      <p><a href="#work">Work</a></p>
-      <p><a href="#team">Team</a></p>
-      <p><a href="#contact">Contact</a></p>
+       <p >&copy; Broadway 2016
+         <a href="./home.html">Home</a>
+          <a href="#about">About</a>
+          <a href="#work">Work</a>
+          <a href="#team">Team</a>
+          <a href="#contact">Contact</a>
+        </p>
       </nav>
     </div>
   </body>
